<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:id="@+id/Lfirstline"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="10dp" >
            <ImageButton
                android:id="@+id/LLibarary"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="centerInside"
                android:src="@drawable/shelf" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_LLibaray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >
            <ImageButton
                android:id="@+id/LBorrow"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="centerInside"
                android:src="@drawable/borrow"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_LBorrow"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Lfirstline"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="160dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/LNew"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="centerInside"
                android:src="@drawable/upbook" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/t_LNew" />
        </LinearLayout>

        <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="10dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:src="@mipmap/ic_launcher">
            <ImageButton
                android:id="@+id/LFavorites"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="centerInside"
                android:src="@drawable/favorite" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_LFavorites" />
        </LinearLayout>>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>